<resources>
    <string name="app_name">ExperimentNextgen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_experiment">Experiment</string>
    <string name="participant">Participant</string>
    <string name="title_activity_condition">Condition</string>
    <string name="title_activity_trial">Trial</string>
    <string name="title_activity_end_of_condition">EndOfCondition</string>
    <string name="title_activity_trial_timeout">TrialTimeout</string>
    <string name="title_activity_trial_incorrect_selection">TrialIncorrectSelection</string>
    <string name="title_activity_end_of_experiment">EndOfExperiment</string>
    <string name="title_activity_pager">Pager</string>
    <string name="start_condition">Condition #</string>
    <string name="start_trial">Touch anywhere to start</string>
    <string name="trial_message">message</string>
    <string name="experiment_button_start">Start</string>
    <string name="experiment_button_restore">Restore</string>
    <string name="condition_button_start">Press to start</string>
    <string name="file_test">AM I SAVED IN A FILE RIGHT NOW? COOL!</string>
    <string name="trial_failure_message">✗ Wrong Icon</string>
    <string name="trial_timeout_message">Timeout</string>
    <string name="trial_success_message">✓ Good job!</string>
    <string name="trial_practice_message">Practice trial</string>
    <string name="trial_restored_message">Restored trial</string>
    <string name="trial_none_message"/>
    <string name="end_of_condition">End of condition.\nTime to take a break!</string>
    <string name="end_of_experiment">Thank you for your participation!</string>
    <string name="experiment_button_end">Close experiment</string>
    <string name="trial_icon_label">icon_label</string>
    <string name="zoom_in">Zoom In</string>
    <string name="transparency">Transparency</string>
    <string name="color">Color</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="pulse_out">Pulse Out</string>
    <string name="pulse_in">Pulse In</string>
    <string name="interrupted_color">Interrupted Color</string>
    <string name="blur">Blur</string>
    <string name="color_blur">Color+blur</string>
    <string name="twist">Twist</string>
    <string name="change_bkg">Change background</string>
    <string name="state_log_header">TimeStamp, Participant ID, Block #, Accuracy, NumPages, Condition, Trial #, Start Time(ms), Target Icon Page #, Target Icon Row #, Target Icon Column #, Target Icon Name, Target Icon Label, Zipfian rank</string>
    <string name="trial_log_header">Highlighted, Duration(ms), Icon Page #, Icon Row #, Icon Col #, Success, Timeout, Miss, #PagesVisited, Icon Name, Icon Label, Page #, TimeOnPage, TimeSwiping</string>
    <string name="events_log_header">Event Name, Event Description</string>
    <string name="experiment_log_header">TimeStamp, Participant ID</string>
    <string name="experiment_parameters_log_header">#Conditions, #Trials, #PagesLow, #PagesHigh, AccuracyLow, AccuracyHigh , #Highlighted Icons, Timeout, Duration(ms)</string>
    <string name="num_pages"># pages</string>
    <string name="icon_0_label">Asparagus</string>
    <string name="icon_1_label">Apples</string>
    <string name="icon_2_label">Avocado</string>
    <string name="icon_3_label">Acorn</string>
    <string name="icon_4_label">Almond</string>
    <string name="icon_5_label">Artichoke</string>
    <string name="icon_6_label">Antelope</string>
    <string name="icon_7_label">Bacon</string>
    <string name="icon_8_label">Bagels</string>
    <string name="icon_9_label">Bbq</string>
    <string name="icon_10_label">Bison</string>
    <string name="icon_11_label">Barley</string>
    <string name="icon_12_label">Beer</string>
    <string name="icon_13_label">Bisque</string>
    <string name="icon_14_label">Bluefish</string>
    <string name="icon_15_label">Bread</string>
    <string name="icon_16_label">Broccoli</string>
    <string name="icon_17_label">Burrito</string>
    <string name="icon_18_label">Cabbage</string>
    <string name="icon_19_label">Cake</string>
    <string name="icon_20_label">Carrots</string>
    <string name="icon_21_label">Cheesecake</string>
    <string name="icon_22_label">Burger</string>
    <string name="icon_23_label">Celery</string>
    <string name="icon_24_label">Cheese</string>
    <string name="icon_25_label">Chicken</string>
    <string name="icon_26_label">Catfish</string>
    <string name="icon_27_label">Chips</string>
    <string name="icon_28_label">Chocolate</string>
    <string name="icon_29_label">Chowder</string>
    <string name="icon_30_label">Clams</string>
    <string name="icon_31_label">Coffee</string>
    <string name="icon_32_label">Cookies</string>
    <string name="icon_33_label">Corn</string>
    <string name="icon_34_label">Cupcakes</string>
    <string name="icon_35_label">Crab</string>
    <string name="icon_36_label">Curry</string>
    <string name="icon_37_label">Cereal</string>
    <string name="icon_38_label">Dates</string>
    <string name="icon_39_label">Dips</string>
    <string name="icon_40_label">Duck</string>
    <string name="icon_41_label">Dumplings</string>
    <string name="icon_42_label">Donuts</string>
    <string name="icon_43_label">Eggs</string>
    <string name="icon_44_label">Eggrolls</string>
    <string name="icon_45_label">Edamame</string>
    <string name="icon_46_label">Fish</string>
    <string name="icon_47_label">Fondue</string>
    <string name="icon_48_label">Garlic</string>
    <string name="icon_49_label">Ginger</string>
    <string name="icon_50_label">Goose</string>
    <string name="icon_51_label">Granola</string>
    <string name="icon_52_label">Grapes</string>
    <string name="icon_53_label">Ham</string>
    <string name="icon_54_label">Hamburger</string>
    <string name="icon_55_label">Honey</string>
    <string name="icon_56_label">Hummus</string>
    <string name="icon_57_label">Jelly</string>
    <string name="icon_58_label">Jam</string>
    <string name="icon_59_label">Kale</string>
    <string name="icon_60_label">Ketchup</string>
    <string name="icon_61_label">Kiwi</string>
    <string name="icon_62_label">Kingfish</string>
    <string name="icon_63_label">Lobster</string>
    <string name="icon_64_label">Lamb</string>
    <string name="icon_65_label">Linguine</string>
    <string name="icon_66_label">Lasagna</string>
    <string name="icon_67_label">Meatballs</string>
    <string name="icon_68_label">Moose</string>
    <string name="icon_69_label">Milk</string>
    <string name="icon_70_label">Milkshake</string>
    <string name="icon_71_label">Noodles</string>
    <string name="icon_72_label">Pizza</string>
    <string name="icon_73_label">Pepperoni</string>
    <string name="icon_74_label">Pancakes</string>
    <string name="icon_75_label">Spinach</string>
    <string name="icon_76_label">Spaghetti</string>
    <string name="icon_77_label">Toast</string>
    <string name="icon_78_label">Waffles</string>
    <string name="icon_79_label">Wine</string>
    <string name="icon_80_label">Walnuts</string>
    <string name="icon_81_label">Yogurt</string>
    <string name="icon_82_label">Zucchini</string>
    <string name="icon_83_label">Alligator</string>
    <string name="icon_84_label">Ant</string>
    <string name="icon_85_label">Ape</string>
    <string name="icon_86_label">Armadillo</string>
    <string name="icon_87_label">Bader</string>
    <string name="icon_88_label">Bat</string>
    <string name="icon_89_label">Beaver</string>
    <string name="icon_90_label">Bear</string>
    <string name="icon_91_label">Bee</string>
    <string name="icon_92_label">Buffalo</string>
    <string name="icon_93_label">Butterfly</string>
    <string name="icon_94_label">Bird</string>
    <string name="icon_95_label">Buffalo</string>
    <string name="icon_96_label">Camel</string>
    <string name="icon_97_label">Caribou</string>
    <string name="icon_98_label">Cat</string>
    <string name="icon_99_label">Cattle</string>
    <string name="icon_100_label">Chimpanzee</string>
    <string name="icon_101_label">Cod</string>
    <string name="icon_102_label">Coyote</string>
    <string name="icon_103_label">Crane</string>
    <string name="icon_104_label">Crocodile</string>
    <string name="icon_105_label">Crow</string>
    <string name="icon_106_label">Chicken</string>
    <string name="icon_107_label">Cow</string>
    <string name="icon_108_label">Deer</string>
    <string name="icon_109_label">Dinosaur</string>
    <string name="icon_110_label">Dog</string>
    <string name="icon_111_label">Dolphin</string>
    <string name="icon_112_label">Donkey</string>
    <string name="icon_113_label">Dove</string>
    <string name="icon_114_label">Dragonfly</string>
    <string name="icon_115_label">Duck</string>
    <string name="icon_116_label">Eagle</string>
    <string name="icon_117_label">Eel</string>
    <string name="icon_118_label">Elephant</string>
    <string name="icon_119_label">Flamingo</string>
    <string name="icon_120_label">Fly</string>
    <string name="icon_121_label">Fox</string>
    <string name="icon_122_label">Frog</string>
    <string name="icon_123_label">Goose</string>
    <string name="icon_124_label">Goldfish</string>
    <string name="icon_125_label">Gorilla</string>
    <string name="icon_126_label">Grass</string>
    <string name="icon_127_label">Goat</string>
    <string name="icon_128_label">Hare</string>
    <string name="icon_129_label">Hawk</string>
    <string name="icon_130_label">Hedgehog</string>
    <string name="icon_131_label">Horse</string>
    <string name="icon_132_label">Jellyfish</string>
    <string name="icon_133_label">Kangaroo</string>
    <string name="icon_134_label">Leopard</string>
    <string name="icon_135_label">Lion</string>
    <string name="icon_136_label">Lobster</string>
    <string name="icon_137_label">Mink</string>
    <string name="icon_138_label">Mole</string>
    <string name="icon_139_label">Monkey</string>
    <string name="icon_140_label">Moose</string>
    <string name="icon_141_label">Mouse</string>
    <string name="icon_142_label">Mosquito</string>
    <string name="icon_143_label">Octopus</string>
    <string name="icon_144_label">Owl</string>
    <string name="icon_145_label">Ox</string>
    <string name="icon_146_label">Oyster</string>
    <string name="icon_147_label">Penguin</string>
    <string name="icon_148_label">Pigeon</string>
    <string name="icon_149_label">Pony</string>
    <string name="icon_150_label">Porcupine</string>
    <string name="icon_151_label">Person</string>
    <string name="icon_152_label">Pig</string>
    <string name="icon_153_label">Raccoon</string>
    <string name="icon_154_label">Rabbit</string>
    <string name="icon_155_label">Rat</string>
    <string name="icon_156_label">Raven</string>
    <string name="icon_157_label">Salmon</string>
    <string name="icon_158_label">Snake</string>
    <string name="icon_159_label">Spider</string>
    <string name="icon_160_label">Squid</string>
    <string name="icon_161_label">Squirrel</string>
    <string name="icon_162_label">Swan</string>
    <string name="icon_163_label">Sheep</string>
    <string name="icon_164_label">Toad</string>
    <string name="icon_165_label">Turkey</string>
    <string name="icon_166_label">Turtle</string>
    <string name="icon_167_label">Tiger</string>
    <string name="icon_168_label">Whale</string>
    <string name="icon_169_label">Wolf</string>
    <string name="icon_170_label">Zebra</string>
    <string name="icon_171_label">Alder</string>
    <string name="icon_172_label">Almond</string>
    <string name="icon_173_label">Banana</string>
    <string name="icon_174_label">Bean</string>
    <string name="icon_175_label">Chestnut</string>
    <string name="icon_176_label">Cherry</string>
    <string name="icon_177_label">Cinnamon</string>
    <string name="icon_178_label">Clove</string>
</resources>