<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ios_background"
    tools:context=".Condition" >

    <TextView
        android:id="@+id/start_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/start_condition"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
            android:id="@+id/num_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:text="@string/num_pages"
            android:textColor="@color/lightblue"
            android:textSize="60sp" />
    
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="40dp"
         android:onClick="startFirstTrial"
         android:text="@string/condition_button_start"
         android:textColor="@color/white"
         android:textSize="20sp" />

</RelativeLayout>
