<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ios_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Trial" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/start_trial"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/target_icon"
        android:layout_width="120dip"
        android:layout_height="120dip"
        android:layout_below="@+id/message_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/start_trial" />

    <TextView
        android:id="@+id/message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/trial_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/target_icon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/target_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/trial_icon_label"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    	

</RelativeLayout>