<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/ios_background"
    tools:context=".Experiment" >

   <TextView
       android:id="@+id/participant"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:textSize="20sp"
       android:text="@string/participant" />
    
    <ca.ubc.cs.ephemerallauncherexperiment.NoDefaultSpinner
   		android:id="@+id/participants_spinner"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/participant"
    	android:layout_alignBaseline="@id/participant"  />
    
    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/experiment_button_start"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="50dp"
        android:textSize="20sp"
        android:onClick = "startFirstCondition"
        android:textColor="@color/white" 
        />

    <Button
            android:id="@+id/buttonRestore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/experiment_button_restore"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="40dp"
            android:layout_toRightOf="@+id/buttonStart"
            android:layout_alignBaseline="@+id/buttonStart"
            android:layout_alignBottom="@+id/buttonStart"
            android:textSize="20sp"
            android:onClick = "restore"
            android:textColor="@color/white"
            />


</RelativeLayout>
